--- a/src/main/resources/templates/third.html
+++ b/src/main/resources/templates/third.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Report №{{reportNumber}}</title>
+    <link href="/resources/css/main.css" />" rel="stylesheet">
 </head>
 <body>
 <h1>Report №{{reportNumber}}</h1>
