--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,8 +1,10 @@
 
 table {
-    border-collapse: collapse; /*убираем пустые промежутки между ячейками*/
-    border: 1px solid grey; /*устанавливаем для таблицы внешнюю границу серого цвета толщиной 1px*/
-    background-color: aqua;
+    border-collapse: collapse;
+    border: 1px solid grey;
+    background-color: aliceblue;
 }
 
-th,td {border: 1px solid grey;}
+th, td {
+    border: 1px solid grey;
+}
